# Gui_App

Gui_App/: CMakeLists.txt  README.md
Gui_App/Dependancies/Includes/: glad.c
Gui_App/Dependancies/Includes/glad/: glad.h
Gui_App/Headers/: logger.h  window.h
Gui_App/src/: main.cpp
